--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
@@ -87,7 +87,7 @@ Affiliate: <b>@Model.Campaign.Affiliate.DisplayName</b><br />
                         <td>@Html.EditorFor(_ => creativeStat.Clicks, null, "CreativeStats[" + i + "].Clicks")</td>
                     </tr>
                     <tr>
-                        <td>@Html.Label("Leads")</td>
+                        <td>@Html.Label("Conversions")</td>
                         <td>@Html.EditorFor(_ => creativeStat.Leads, null, "CreativeStats[" + i + "].Leads")</td>
                     </tr>
                 </table>
