--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Edit.cshtml
@@ -50,6 +50,10 @@ Affiliate: <b>@Model.Campaign.Affiliate.DisplayName</b><br />
                 <td>@Html.EditorFor(m => m.Opens)</td>
             </tr>
             <tr>
+                <td>@Html.LabelFor(m => m.Extra)</td>
+                <td>@Html.EditorFor(m => m.Extra)</td>
+            </tr>
+            <tr>
                 <td>@Html.LabelFor(m => m.CombineCreatives)</td>
                 <td>@Html.EditorFor(m => m.CombineCreatives)</td>
             </tr>
