--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/FieldsTable.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/FieldsTable.cshtml
@@ -32,6 +32,10 @@
             <td>@Html.DisplayFor(m => m.Opens)</td>
         </tr>
         <tr>
+            <td>@Html.LabelFor(m => m.Extra)</td>
+            <td>@Html.DisplayFor(m => m.Extra)</td>
+        </tr>
+        <tr>
             <td>@Html.LabelFor(m => m.CombineCreatives)</td>
             <td>@(Model.CombineCreatives ? "yes" : "no")</td>
         </tr>
