--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CampaignDrops/Index.cshtml
@@ -2,8 +2,11 @@
 @{
     var ajaxOptions = RazorHelpers.GetAjaxOptions("cpmDropsTab", "navCPMDrops");
     var ajaxOpts_Confirm = RazorHelpers.GetAjaxOptions("cpmSummaryTab", null, "Get", "Are you sure you want to delete this drop?");
-    bool showActions = ViewBag.ShowActions ?? true;
+
     string title = ViewBag.Title ?? "Drops:";
+    bool showActions = ViewBag.ShowActions ?? true;
+    bool? showExtraN = ViewBag.ShowExtra;
+    bool showExtra = (showExtraN.HasValue ? showExtraN.Value : !showActions);
 }
 
 @title<br />
@@ -18,6 +21,10 @@
         <th style="text-align:center">Clicks</th>
         <th style="text-align:center">Conversions</th>
         <th style="text-align:center">Total Cost</th>
+        @if (showExtra)
+        {
+            <th style="text-align:center">Extra</th>
+        }
         @if (showActions) {
             <th></th>
         }
@@ -31,14 +38,15 @@
         <td style="text-align:center">@(drop.Opens.HasValue ? drop.Opens.Value.ToString("N0") : "")<br />
             Open Rate: @(drop.OpenRate.HasValue ? String.Format("{0:0.00%}", drop.OpenRate.Value) : "")</td>
         <td style="text-align:center">@drop.CreativeStatTotals.Clicks.Value.ToString("N0")<br />
-            CTR: @(drop.ClickThroughRate.HasValue ? String.Format("{0:0.00%}", drop.ClickThroughRate.Value) : "")
-        </td>
+            CTR: @(drop.ClickThroughRate.HasValue ? String.Format("{0:0.00%}", drop.ClickThroughRate.Value) : "")</td>
         <td style="text-align:center">@drop.CreativeStatTotals.Leads.Value.ToString("N0")<br />
-            Conv Rate: @(drop.ConversionRate.HasValue ? String.Format("{0:0.00%}", drop.ConversionRate.Value) : "")
-        </td>
+            Conv Rate: @(drop.ConversionRate.HasValue ? String.Format("{0:0.00%}", drop.ConversionRate.Value) : "")</td>
         <td style="text-align:center">@(drop.Cost.HasValue ? drop.Cost.Value.ToString("C2") : "")<br />
-            eCPL: @(drop.CostPerLead.HasValue ? drop.CostPerLead.Value.ToString("C2") : "")
-        </td>
+            eCPL: @(drop.CostPerLead.HasValue ? drop.CostPerLead.Value.ToString("C2") : "")</td>
+        @if (showExtra)
+        {
+            <td style="text-align:center">@drop.Extra</td>
+        }
         @if (showActions)
         {
             <td>@Ajax.ActionLink("Manage", "Show", "CampaignDrops", new { id = drop.CampaignDropId }, ajaxOptions)
@@ -59,7 +67,8 @@
                 <td colspan="2">Creative: @creativeStat.Creative.CreativeName</td>
                 <td style="text-align:center">@(creativeStat.Clicks.HasValue ? creativeStat.Clicks.Value.ToString("N0") : "")<br />
                     CTR: @(creativeStat.ClickThroughRate.HasValue ? String.Format("{0:0.00%}", creativeStat.ClickThroughRate.Value) : "")</td>
-                <td style="text-align:center">@(creativeStat.Leads.HasValue ? creativeStat.Leads.Value.ToString("N0") : "")</td>
+                <td style="text-align:center">@(creativeStat.Leads.HasValue ? creativeStat.Leads.Value.ToString("N0") : "")<br />
+                    Conv Rate: @(creativeStat.ConversionRate.HasValue ? String.Format("{0:0.00%}", creativeStat.ConversionRate.Value) : "")</td>
             </tr>
         }
     }
