--- a/1/EomTool/EomToolWeb/Views/Shared/ChooseMonth.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/ChooseMonth.cshtml
@@ -1,4 +1,11 @@
 ﻿@model SelectList
+@{
+    bool debugMode = ViewBag.DebugMode ?? false;
+}
+@if (debugMode)
+{
+    <span style="color:red">[DEBUG MODE]</span>
+}
 @using (Html.BeginForm("ChooseMonth", "Payouts"))
 {
     @Html.DropDownList("selectedMonth", Model, new { onchange = "this.form.submit();" })
