--- a/1/EomTool/EomToolWeb/Views/Invoices/ChooseAmounts.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ChooseAmounts.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ChooseAmountsModel
 @{
+    var campaignAmounts = Model.CampaignAmounts.OrderBy(ca => ca.CampaignName).ThenBy(ca => ca.AffiliateName).ToList();
     int lastPid = -1;
     bool grayRow = false;
     bool firstRow = true;
@@ -7,15 +8,20 @@
 
 <h2>@Model.AdvertiserName</h2>
 
+@using (Html.BeginForm("Generate", "Invoices"))
+{
+
 <table style="border: 1px solid gray">
     <tr>
         <th>PID</th>
         <th>Campaign</th>
         <th>Affiliate</th>
+        <th>#Units</th>
         <th colspan="2">Revenue</th>
     </tr>
-@foreach (var ca in Model.CampaignAmounts)
+@for (int i = 0; i < campaignAmounts.Count; i++)
 {
+    var ca = campaignAmounts[i];
     if (ca.Pid != lastPid)
     {
         lastPid = ca.Pid;
@@ -30,8 +36,34 @@
         <td style="text-align: center">@(firstRow ? ca.Pid.ToString() : "")</td>
         <td>@(firstRow ? ca.CampaignName : "")</td>
         <td>@ca.AffiliateName</td>
+        <td style="text-align: center">@ca.NumUnits</td>
         <td>@ca.RevenueCurrency</td>
         <td style="text-align: right">@ca.Revenue.ToString("N2")</td>
-    </tr>    
+        <td><input type="checkbox" name="idpairs" value="@(ca.Pid + "," + ca.AffId)" class="chk@(ca.Pid)" checked="checked" /></td>
+        <td>
+            @if (firstRow)
+            {
+                <a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',true); return false">all</a><text> | </text>
+                <a href="#" onclick="$('.chk@(ca.Pid)').prop('checked',false); return false">none</a>
+            }
+        </td>
+    </tr>
+    if (i == campaignAmounts.Count - 1 || ca.Pid != campaignAmounts[i + 1].Pid)
+    {
+        //TOTAL row for a campaign...
+        var sa = Model.SummaryAmount(ca.Pid);
+
+        <tr style="@(grayRow ? "background-color:#ddd" : "")">
+            <td></td>
+            <td></td>
+            <td style="font-weight: bold; text-align: right">CAMPAIGN TOTAL...</td>
+            <td style="font-weight: bold; text-align: center">@sa.NumUnits</td>
+            <td style="font-weight: bold">@sa.RevenueCurrency</td>
+            <td style="font-weight: bold; text-align: right">@sa.Revenue.ToString("N2")</td>
+        </tr>
+    }
 }
 </table>
+
+<input type="submit" value="Preview" />
+}
