--- a/1/EomTool/EomToolWeb/Views/Invoices/ShowEmail.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Invoices/ShowEmail.cshtml
@@ -3,7 +3,7 @@
     var invoice = Model;
 }
 
-Invoice for: @invoice.Advertiser.name
+<b>Invoice Request for:</b> @invoice.Advertiser.name
 <br /><br />
 
 <table style="border: 1px solid gray">
@@ -20,17 +20,7 @@ Invoice for: @invoice.Advertiser.name
         <td style="text-align: center">@li.NumUnits</td>
         <td>@li.Currency.name</td>
         <td style="text-align: right">@li.Amount.ToString("N2")</td>
-        <td><a href="#" onclick="$('.sub@(i)').toggle(); return false">+</a></td>
     </tr>
-    foreach (var item in li.SubItems)
-    {
-        <tr style="background-color:#ddd; display: none" class="sub@(i)">
-            <td style="text-align: right">Aff: @item.affid ...</td>
-            <td style="text-align: center">@item.num_units</td>
-            <td>@item.CurrencyName</td>
-            <td style="text-align: right">@item.amount.ToString("N2")</td>
-        </tr>
-    }
 }
     <tr>
         <td colspan="2" style="font-weight: bold; text-align: right">TOTAL:</td>
@@ -38,12 +28,8 @@ Invoice for: @invoice.Advertiser.name
         <td>@invoice.Total.ToString("N2")</td>
     </tr>
 </table>
-<br />
 
-@using (Html.BeginForm("Send", "Invoices"))
-{
-    <text>Comment:</text><br />
-    <textarea style="width: 450px; height: 135px" name="note"></textarea>
-    <br />
-    <input type="submit" value="Send" />
-}
+<br />
+<b>Comments:</b><br />
+
+@Html.DisplayWithBreaksFor(m => m.LatestNoteString)
